--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,10 +23,17 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	line-height: 1;
-  background-color: grey;
-  color: white;
-  font-family:Arial, Helvetica, sans-serif
+	background: white;
+	background-image: url('../assets/background.png');
+  background-size: cover;
+  color: black;
+  font-family:Arial, Helvetica, sans-serif;
+	height: 100vh;
+	
 }
 ol, ul {
 	list-style: none;
