--- a/src/views/MineCraftBingo/minecraftBingo.styles.css
+++ b/src/views/MineCraftBingo/minecraftBingo.styles.css
@@ -6,13 +6,16 @@
     border-radius: 8px;
     overscroll-behavior: none;
     margin-top: 50px;
+    width: 70vw;
+    height: 90vh;
+    background-color: white;
 }
 
 .bingo-header {
     display: flex;
     flex-direction: column;
     padding: 1.5rem;
-    border-bottom: 2px solid white;
+    border-bottom: 2px solid rgb(0, 0, 0);
     font-size: 30px;
 }
 
@@ -47,8 +50,8 @@
 
 .bingo-button {
     cursor: pointer;
-    color: white;
-    background-color: #929292;
+    color: rgb(0, 0, 0);
+    background-color: #ffffff;
     border-radius: 50%;
     padding: 8px;
     margin-right: 10px;
